tests/errors/exceptions.php
<?php
/**
 * Created by PhpStorm.
 * User: dmitrij.rebrov
 * Date: 05/07/2018
 * Time: 12:54
 */

class CustomException { }
throw new CustomException('Error!');

// A fatal error will occur when you try to throw the exception